infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  # this tells deployment, how to find all the pods it has to create
  selector:
    matchLabels:
      app: expiration

  # how to create each individual pod that this deployment is going to create
  template:
    metadata:
      # selector has to match the label
      labels:
        app: expiration

    spec:
      containers:
        - name: expiration
          image: kalinicovic/expiration
