infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  # this how deployment find the pod that it creates
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      # this label is applied to pod
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          # docker hub hosts this
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  # this tells service it will govern access to
  selector:
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
