infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  # this tells deployment, how to find all the pods it has to create
  selector:
    matchLabels:
      app: payments

  # how to create each individual pod that this deployment is going to create
  template:
    metadata:
      # selector has to match the label
      labels:
        app: payments

    spec:
      containers:
        - name: payments
          image: kalinicovic/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  # this tells the service how to find the set of pods that is supposed to govern access to. we want to find all the pods app:payments
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
