infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  # this tells deployment, how to find all the pods it has to create
  selector:
    matchLabels:
      app: tickets

  # how to create each individual pod that this deployment is going to create
  template:
    metadata:
      # selector has to match the label
      labels:
        app: tickets

    spec:
      containers:
        - name: tickets
          image: kalinicovic/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  # this tells the service how to find the set of pods that is supposed to govern access to. we want to find all the pods app:tickets
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
